--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,7 @@ name = "Aleph"
 uuid = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 authors = ["sandreza <andrenogueirasouza@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
