--- a/Project.toml
+++ b/Project.toml
@@ -4,5 +4,10 @@ authors = ["sandreza <andrenogueirasouza@gmail.com>"]
 version = "0.1.0"
 
 [deps]
+CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
+ClimateMachine = "777c4786-024f-11e9-21a3-85d5d4106250"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
+GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
