--- a/Project.toml
+++ b/Project.toml
@@ -11,3 +11,4 @@ DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
