--- a/Project.toml
+++ b/Project.toml
@@ -1,18 +1,20 @@
 name = "Aleph"
 uuid = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
-authors = ["sandreza <andrenogueirasouza@gmail.com>", 
-           "jiahe <jiahe.gatech@gmail.com>",
-           "bischtob <bischtob@gmail.com>"]
+authors = ["sandreza <andrenogueirasouza@gmail.com>", "jiahe <jiahe.gatech@gmail.com>", "bischtob <bischtob@gmail.com>"]
 version = "0.1.0"
 
 [deps]
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
+ClimaCore = "d414da3d-4745-48bb-8d80-42e94e092884"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 DocumenterTools = "35a29f4d-8980-5a13-9543-d66fff28ecb8"
 GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
+JLD = "4138dd39-2aa7-5051-a626-17a0bb65d9c8"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
+TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
