--- a/Project.toml
+++ b/Project.toml
@@ -1,8 +1,6 @@
 name = "Aleph"
 uuid = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
-authors = ["sandreza <andrenogueirasouza@gmail.com>", 
-           "jiahe <jiahe.gatech@gmail.com>",
-           "bischtob <bischtob@gmail.com>"]
+authors = ["sandreza <andrenogueirasouza@gmail.com>", "jiahe <jiahe.gatech@gmail.com>", "bischtob <bischtob@gmail.com>"]
 version = "0.1.0"
 
 [deps]
@@ -13,6 +11,7 @@ GaussQuadrature = "d54b0c1a-921d-58e0-8e36-89d8069c0969"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
