replace name with ClimaAtmos

--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "Aleph"
+name = "ClimaAtmos"
 uuid = "b2c96348-7fb7-4fe0-8da9-78d88439e717"
 authors = ["sandreza <andrenogueirasouza@gmail.com>", "jiahe <jiahe.gatech@gmail.com>", "bischtob <bischtob@gmail.com>"]
 version = "0.1.0"
