CompatHelper: add new compat entry for ClimaCore at version 0.1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -23,19 +23,20 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
+ClimaCore = "0.1"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
-StaticArrays = "1"
-Plots = "1"
-OrdinaryDiffEq = "5"
-GaussQuadrature = "0.5"
-JLD2 = "0.4"
-IntervalSets = "0.5"
-RecursiveArrayTools = "2"
 Documenter = "0.27"
-MPI = "0.19"
-UnPack = "1"
 DocumenterTools = "0.1"
+GaussQuadrature = "0.5"
+IntervalSets = "0.5"
+JLD2 = "0.4"
+MPI = "0.19"
+OrdinaryDiffEq = "5"
+Plots = "1"
+RecursiveArrayTools = "2"
+StaticArrays = "1"
+UnPack = "1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
