--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-ClimaCore = "0.1"
+ClimaCore = "0.1, 0.2"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Documenter = "0.27"
