--- a/Project.toml
+++ b/Project.toml
@@ -32,7 +32,7 @@ GaussQuadrature = "0.5"
 IntervalSets = "0.5"
 JLD2 = "0.4"
 MPI = "0.19"
-OrdinaryDiffEq = "5"
+OrdinaryDiffEq = "5, 6"
 Plots = "1"
 RecursiveArrayTools = "2"
 StaticArrays = "1"
