--- a/Project.toml
+++ b/Project.toml
@@ -26,6 +26,7 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
+CLIMAParameters = "0.3"
 ClimaCore = "0.6"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
