--- a/Project.toml
+++ b/Project.toml
@@ -29,9 +29,9 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 CLIMAParameters = "0.3, 0.4"
-ClimaCore = "0.6"
-ClimaCoreVTK = "0.4"
+ClimaCore = "0.6, 0.7"
 ClimaCorePlots = "0.1"
+ClimaCoreVTK = "0.4"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Documenter = "0.27"
