--- a/Project.toml
+++ b/Project.toml
@@ -31,7 +31,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 CLIMAParameters = "0.3, 0.4"
 ClimaCore = "0.6, 0.7"
 ClimaCorePlots = "0.1"
-ClimaCoreVTK = "0.4"
+ClimaCoreVTK = "0.4, 0.5"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Documenter = "0.27"
