--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
@@ -30,8 +31,8 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 CLIMAParameters = "0.3, 0.4"
 ClimaCore = "0.6"
-ClimaCoreVTK = "0.4"
 ClimaCorePlots = "0.1"
+ClimaCoreVTK = "0.4"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
 Documenter = "0.27"
