--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -51,6 +51,8 @@ steps:
     key: "cpu_1d_ekman_column"
     command:
       - "julia --color=yes --project=test test/test_cases/run_1d_ekman_column.jl"
+    artifact_paths:
+      - "test/test_cases/run_1d_ekman_column/*"
     agents:
       config: cpu
       queue: central
@@ -60,6 +62,8 @@ steps:
     key: "cpu_2d_rising_bubble"
     command:
       - "julia --color=yes --project=test test/test_cases/run_2d_rising_bubble.jl"
+    artifact_paths:
+      - "test/test_cases/run_2d_rising_bubble/*"
     agents:
       config: cpu
       queue: central
@@ -69,6 +73,8 @@ steps:
     key: "cpu_3d_rising_bubble"
     command:
       - "julia --color=yes --project=test test/test_cases/run_3d_rising_bubble.jl"
+    artifact_paths:
+      - "test/test_cases/run_3d_rising_bubble/*"
     agents:
       config: cpu
       queue: central
@@ -78,6 +84,8 @@ steps:
     key: "cpu_3d_solid_body_rotation"
     command:
       - "julia --color=yes --project=test test/test_cases/run_3d_solid_body_rotation.jl"
+    artifact_paths:
+      - "test/test_cases/run_3d_solid_body_rotation/*"
     agents:
       config: cpu
       queue: central
@@ -87,6 +95,8 @@ steps:
     key: "cpu_3d_balanced_flow"
     command:
       - "julia --color=yes --project=test test/test_cases/run_3d_balanced_flow.jl"
+    artifact_paths:
+      - "test/test_cases/run_3d_balanced_flow/*"
     agents:
       config: cpu
       queue: central
@@ -96,6 +106,8 @@ steps:
     key: "cpu_3d_baroclinic_wave"
     command:
       - "julia --color=yes --project=test test/test_cases/run_3d_baroclinic_wave.jl"
+    artifact_paths:
+      - "test/test_cases/run_3d_baroclinic_wave/*"
     agents:
       config: cpu
       queue: central
