--- a/Project.toml
+++ b/Project.toml
@@ -22,7 +22,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 [compat]
 CLIMAParameters = "0.3, 0.4"
 ClimaCore = "0.6, 0.7"
-ClimaCorePlots = "0.1"
+ClimaCorePlots = "0.1, 0.2"
 ClimaCoreVTK = "0.4, 0.5"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5"
