Initial commit: Update domain and function space interface to support vertical mesh stretching options. Apply simple type verification tests Update documentation to reflect changes in domain interface. Update to use ClimaCore 0.8.0 	modified:   ../src/Domains/Domains.jl 	modified:   ../src/Domains/domain.jl 	modified:   ../src/Domains/make_function_space.jl 	modified:   test_domains.jl Apply formatter Update doctest

--- a/Project.toml
+++ b/Project.toml
@@ -21,9 +21,8 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 CLIMAParameters = "0.4"
-ClimaCore = "0.7"
 ClimaCorePlots = "0.2"
-ClimaCoreVTK = "0.5"
+ClimaCoreVTK = "0.6"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5"
 JLD2 = "0.4"
@@ -31,3 +30,6 @@ OrdinaryDiffEq = "6"
 StaticArrays = "1"
 Thermodynamics = "0.5"
 UnPack = "1"
+
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
