--- a/test/Project.toml
+++ b/test/Project.toml
@@ -1,3 +1,20 @@
+[compat]
+CLIMAParameters = "0.4"
+ClimaCore = "0.8"
+ClimaCorePlots = "0.2"
+ClimaCoreVTK = "0.6"
+DiffEqCallbacks = "2"
+Documenter = "0.27"
+DocumenterTools = "0.1"
+IntervalSets = "0.5"
+JLD2 = "0.4"
+MPI = "0.19"
+OrdinaryDiffEq = "6"
+Plots = "1"
+StaticArrays = "1"
+Thermodynamics = "0.5"
+UnPack = "1"
+
 [deps]
 ArgParse = "c7e460c6-2fb9-53a9-8c5b-16f535851c63"
 CLIMAParameters = "6eacf6c3-8458-43b9-ae03-caf5306d3d53"
@@ -21,19 +38,5 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
-[compat]
-CLIMAParameters = "0.4"
-ClimaCore = "0.7"
-ClimaCorePlots = "0.2"
-ClimaCoreVTK = "0.5"
-DiffEqCallbacks = "2"
-Documenter = "0.27"
-DocumenterTools = "0.1"
-IntervalSets = "0.5"
-JLD2 = "0.4"
-MPI = "0.19"
-OrdinaryDiffEq = "6"
-Plots = "1"
-StaticArrays = "1"
-Thermodynamics = "0.5"
-UnPack = "1"
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
