--- a/Project.toml
+++ b/Project.toml
@@ -20,14 +20,14 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
-CLIMAParameters = "0.3, 0.4"
-ClimaCore = "0.6, 0.7"
-ClimaCorePlots = "0.1, 0.2"
-ClimaCoreVTK = "0.4, 0.5"
+CLIMAParameters = "0.4"
+ClimaCore = "0.7"
+ClimaCorePlots = "0.2"
+ClimaCoreVTK = "0.5"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5"
 JLD2 = "0.4"
-OrdinaryDiffEq = "5, 6"
+OrdinaryDiffEq = "6"
 StaticArrays = "1"
 Thermodynamics = "0.5"
 UnPack = "1"
