--- a/Project.toml
+++ b/Project.toml
@@ -21,6 +21,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 CLIMAParameters = "0.4"
+ClimaCore = "0.8"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6"
 DiffEqCallbacks = "2"
