--- a/Project.toml
+++ b/Project.toml
@@ -24,6 +24,7 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 CLIMAParameters = "0.4"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6"
+CloudMicrophysics = "0.3"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5"
 JLD2 = "0.4"
