--- a/Project.toml
+++ b/Project.toml
@@ -27,7 +27,7 @@ ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6"
 CloudMicrophysics = "0.3"
 DiffEqCallbacks = "2"
-IntervalSets = "0.5"
+IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
 OrdinaryDiffEq = "6"
 StaticArrays = "1"
