--- a/Project.toml
+++ b/Project.toml
@@ -22,14 +22,14 @@ UnPack = "3a884ed6-31ef-47d7-9d2a-63182c4928ed"
 
 [compat]
 CLIMAParameters = "0.4"
-ClimaCore = "0.8"
+ClimaCore = "0.9"
 ClimaCorePlots = "0.2"
 ClimaCoreVTK = "0.6, 0.7"
 CloudMicrophysics = "0.3"
 DiffEqCallbacks = "2"
 IntervalSets = "0.5, 0.6"
 JLD2 = "0.4"
-OrdinaryDiffEq = "6"
+OrdinaryDiffEq = "5.64.0, 6"
 StaticArrays = "1"
 Thermodynamics = "0.5, 0.6"
 UnPack = "1"
